# ProjectHawkeye

./: .replit  Clones.py  Convert-o Knowledge-o  Defeated.py  Knowledge.txt  Linux is free and reliable  Names.py  README.md  Reset.py  September.py  Services  Services.py  Seven.py  Virus  converter.py  government  government.py  idkwwrd  pants.py  pyproject.toml  services.py  test.py
UH OH RESET/: Reset.py
