[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["UgandaIsDead <22schlake@gothenburgswedes.org>"]
description = ""
name = "projecthawkeye"
version = "0.1.0"
[tool.poetry.dependencies]
converters = "^0.0.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
